--- a/HW_1.1/HW_1.1/Base.lproj/Main.storyboard
+++ b/HW_1.1/HW_1.1/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,29 +13,29 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="HW_1_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8lp-7H-EMt">
-                                <rect key="frame" x="16" y="288" width="288" height="260"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8lp-7H-EMt">
+                                <rect key="frame" x="16" y="478" width="396" height="394"/>
                                 <color key="backgroundColor" systemColor="systemIndigoColor"/>
                             </view>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uuI-tV-Hg2">
-                                <rect key="frame" x="16" y="20" width="288" height="260"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uuI-tV-Hg2">
+                                <rect key="frame" x="16" y="64" width="396" height="394"/>
                                 <color key="backgroundColor" systemColor="systemPinkColor"/>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uuI-tV-Hg2" secondAttribute="trailing" constant="16" id="4OW-BU-axw"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8lp-7H-EMt" secondAttribute="bottom" constant="20" id="4xF-PR-RR0"/>
-                            <constraint firstItem="8lp-7H-EMt" firstAttribute="top" secondItem="uuI-tV-Hg2" secondAttribute="bottom" constant="42" id="Dt0-qH-zz6"/>
-                            <constraint firstItem="uuI-tV-Hg2" firstAttribute="height" secondItem="8lp-7H-EMt" secondAttribute="height" id="LK2-C0-qrt"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8lp-7H-EMt" secondAttribute="trailing" constant="16" id="Zcc-QD-0qp"/>
-                            <constraint firstItem="uuI-tV-Hg2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="cuA-OW-FOE"/>
-                            <constraint firstItem="8lp-7H-EMt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="iUO-cD-rtm"/>
-                            <constraint firstItem="uuI-tV-Hg2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="qVr-iH-OPY"/>
+                            <constraint firstItem="8lp-7H-EMt" firstAttribute="top" secondItem="uuI-tV-Hg2" secondAttribute="bottom" constant="20" id="Df2-NY-pPG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uuI-tV-Hg2" secondAttribute="trailing" constant="16" id="LSc-6t-bx4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8lp-7H-EMt" secondAttribute="bottom" constant="20" id="OGa-UK-Nz8"/>
+                            <constraint firstItem="uuI-tV-Hg2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Y0P-XF-D6t"/>
+                            <constraint firstItem="uuI-tV-Hg2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="kOU-WC-XPD"/>
+                            <constraint firstItem="8lp-7H-EMt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="kXS-gg-zo5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8lp-7H-EMt" secondAttribute="trailing" constant="16" id="mpg-BI-6Vn"/>
+                            <constraint firstItem="8lp-7H-EMt" firstAttribute="height" secondItem="uuI-tV-Hg2" secondAttribute="height" id="swi-qr-Sew"/>
                         </constraints>
                     </view>
                 </viewController>
